--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -7,12 +7,13 @@
     }
   },
   "remoteEnv": {
-    "XDEBUG_MODE": "off"
+    "XDEBUG_MODE": "off",
+    "XDEBUG_CONFIG": "client_host=host.docker.internal client_port=9003"
   },
   "postCreateCommand": {
     "composer_global": "composer global require squizlabs/php_codesniffer && composer global require phpunit/phpunit",
     "composer_install": "composer install && /home/vscode/.composer/vendor/bin/phpcs --config-set default_standard PSR12",
-    "chmod_app": "chmod +x ./src/app.php"
+    "chmod_app": "chmod +x ./src/app.php && chmod +x ./src/command.php"
   },
   "customizations": {
     "vscode": {
@@ -56,6 +57,14 @@
         "mhutchie.git-graph",
         "recca0120.vscode-phpunit"
       ]
+    }
+  },
+  "forwardPorts": [
+    9003
+  ],
+  "portsAttributes": {
+    "9003": {
+      "label": "XDebug"
     }
   },
   "workspaceFolder": "/workspace",
